apps/base/media/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seerr
  name: seerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  strategy: {}
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: ghcr.io/seerr-team/seerr:v3.5.0
          name: seerr
          ports:
            - containerPort: 5055
          livenessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://localhost:5055/api/v1/settings/public
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://localhost:5055/api/v1/settings/public
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            limits:
              memory: 384Mi
            requests:
              cpu: 5m
              memory: 384Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config
