apps/base/media/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: seerr.local
      http:
        paths:
          - backend:
              service:
                name: seerr
                port:
                  number: 80
            path: /
            pathType: Prefix
